// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> should render LoadingIndicator correctly 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 60px; height: 60px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="500"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 500 500"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_2"
        >
          <rect
            height="500"
            width="500"
            x="0"
            y="0"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_2)"
      >
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,250,250)"
        >
          <path
            d="M0 0"
            fill-opacity="0"
            stroke="rgb(0,172,238)"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
            stroke-opacity="1"
            stroke-width="10"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator large contrast with variant 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 120px; height: 120px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="400"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 400 400"
      width="400"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_97"
        >
          <rect
            height="400"
            width="400"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_99"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_100"
        >
          <path
            clip-rule="nonzero"
            d=" M337.12200927734375,186.52200317382812 C337.12200927734375,186.52200317382812 59.625,186.49000549316406 59.625,186.49000549316406 C54.80400085449219,186.49000549316406 52.02000045776367,187.4080047607422 52.02000045776367,192.22900390625 C52.02000045776367,197.0500030517578 54.887001037597656,197.44900512695312 59.70800018310547,197.44900512695312 C59.70800018310547,197.44900512695312 337.2049865722656,197.4810028076172 337.2049865722656,197.4810028076172 C342.0260009765625,197.4810028076172 343.91400146484375,194.68800354003906 343.91400146484375,191.91700744628906 C343.91400146484375,189.5 341.9429931640625,186.52200317382812 337.12200927734375,186.52200317382812"
            fill="#ffffff"
            fill-opacity="1"
          />
        </clippath>
        <clippath
          id="__lottie_element_103"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_116"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_97)"
      >
        <g
          clip-path="url(#__lottie_element_99)"
          opacity="1"
          style="display: block;"
          transform="matrix(0.9997900128364563,0,0,1,2.0739898681640625,8.014007568359375)"
        >
          <g
            clip-path="url(#__lottie_element_100)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,51.5,186.5)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,146.25,5.425000190734863)"
              >
                <path
                  d=" M-140.8249969482422,-5.175000190734863 C-140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 C143.6840057373047,-5.175000190734863 146,-2.8570001125335693 146,0.0010000000474974513 C146,2.8589999675750732 143.6840057373047,5.175000190734863 140.8249969482422,5.175000190734863 C140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 C-143.68299865722656,5.175000190734863 -146,2.8589999675750732 -146,0.0010000000474974513 C-146,-2.8570001125335693 -143.68299865722656,-5.175000190734863 -140.8249969482422,-5.175000190734863z"
                  fill="rgb(215,215,215)"
                  fill-opacity="1"
                />
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_116)"
              style="display: none;"
            >
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_103)"
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,-263.30731201171875,-68)"
            >
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,124,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,39.75,5.425000190734863)"
                >
                  <path
                    d=" M-34.32500076293945,-5.175000190734863 C-34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 C37.18299865722656,-5.175000190734863 39.5,-2.8589999675750732 39.5,0 C39.5,2.8570001125335693 37.18299865722656,5.175000190734863 34.32500076293945,5.175000190734863 C34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 C-37.18299865722656,5.175000190734863 -39.5,2.8570001125335693 -39.5,0 C-39.5,-2.8589999675750732 -37.18299865722656,-5.175000190734863 -34.32500076293945,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,63.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,22.25,5.425000190734863)"
                >
                  <path
                    d=" M-16.825000762939453,-5.175000190734863 C-16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 C19.683000564575195,-5.175000190734863 22,-2.8589999675750732 22,0 C22,2.8570001125335693 19.683000564575195,5.175000190734863 16.825000762939453,5.175000190734863 C16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 C-19.683000564575195,5.175000190734863 -22,2.8570001125335693 -22,0 C-22,-2.8589999675750732 -19.683000564575195,-5.175000190734863 -16.825000762939453,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,219.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,76.25,5.425000190734863)"
                >
                  <path
                    d=" M-70.82499694824219,-5.175000190734863 C-70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 C73.68399810791016,-5.175000190734863 76,-2.8589999675750732 76,0 C76,2.8570001125335693 73.68399810791016,5.175000190734863 70.82499694824219,5.175000190734863 C70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 C-73.68299865722656,5.175000190734863 -76,2.8570001125335693 -76,0 C-76,-2.8589999675750732 -73.68299865722656,-5.175000190734863 -70.82499694824219,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator large with variant 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 120px; height: 120px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="400"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 400 400"
      width="400"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_62"
        >
          <rect
            height="400"
            width="400"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_64"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_65"
        >
          <path
            clip-rule="nonzero"
            d=" M337.12200927734375,186.52200317382812 C337.12200927734375,186.52200317382812 59.625,186.49000549316406 59.625,186.49000549316406 C54.80400085449219,186.49000549316406 52.02000045776367,187.4080047607422 52.02000045776367,192.22900390625 C52.02000045776367,197.0500030517578 54.887001037597656,197.44900512695312 59.70800018310547,197.44900512695312 C59.70800018310547,197.44900512695312 337.2049865722656,197.4810028076172 337.2049865722656,197.4810028076172 C342.0260009765625,197.4810028076172 343.91400146484375,194.68800354003906 343.91400146484375,191.91700744628906 C343.91400146484375,189.5 341.9429931640625,186.52200317382812 337.12200927734375,186.52200317382812"
            fill="#ffffff"
            fill-opacity="1"
          />
        </clippath>
        <clippath
          id="__lottie_element_68"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_81"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_62)"
      >
        <g
          clip-path="url(#__lottie_element_64)"
          opacity="1"
          style="display: block;"
          transform="matrix(0.9997900128364563,0,0,1,2.0739898681640625,8.014007568359375)"
        >
          <g
            clip-path="url(#__lottie_element_65)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,51.5,186.5)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,146.25,5.425000190734863)"
              >
                <path
                  d=" M-140.8249969482422,-5.175000190734863 C-140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 C143.6840057373047,-5.175000190734863 146,-2.8570001125335693 146,0.0010000000474974513 C146,2.8589999675750732 143.6840057373047,5.175000190734863 140.8249969482422,5.175000190734863 C140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 C-143.68299865722656,5.175000190734863 -146,2.8589999675750732 -146,0.0010000000474974513 C-146,-2.8570001125335693 -143.68299865722656,-5.175000190734863 -140.8249969482422,-5.175000190734863z"
                  fill="rgb(215,215,215)"
                  fill-opacity="1"
                />
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_81)"
              style="display: none;"
            >
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_68)"
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,-263.30731201171875,-68)"
            >
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,124,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,39.75,5.425000190734863)"
                >
                  <path
                    d=" M-34.32500076293945,-5.175000190734863 C-34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 C37.18299865722656,-5.175000190734863 39.5,-2.8589999675750732 39.5,0 C39.5,2.8570001125335693 37.18299865722656,5.175000190734863 34.32500076293945,5.175000190734863 C34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 C-37.18299865722656,5.175000190734863 -39.5,2.8570001125335693 -39.5,0 C-39.5,-2.8589999675750732 -37.18299865722656,-5.175000190734863 -34.32500076293945,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,63.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,22.25,5.425000190734863)"
                >
                  <path
                    d=" M-16.825000762939453,-5.175000190734863 C-16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 C19.683000564575195,-5.175000190734863 22,-2.8589999675750732 22,0 C22,2.8570001125335693 19.683000564575195,5.175000190734863 16.825000762939453,5.175000190734863 C16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 C-19.683000564575195,5.175000190734863 -22,2.8570001125335693 -22,0 C-22,-2.8589999675750732 -19.683000564575195,-5.175000190734863 -16.825000762939453,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,219.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,76.25,5.425000190734863)"
                >
                  <path
                    d=" M-70.82499694824219,-5.175000190734863 C-70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 C73.68399810791016,-5.175000190734863 76,-2.8589999675750732 76,0 C76,2.8570001125335693 73.68399810791016,5.175000190734863 70.82499694824219,5.175000190734863 C70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 C-73.68299865722656,5.175000190734863 -76,2.8570001125335693 -76,0 C-76,-2.8589999675750732 -73.68299865722656,-5.175000190734863 -70.82499694824219,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with accessibility 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 60px; height: 60px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="500"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 500 500"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_167"
        >
          <rect
            height="500"
            width="500"
            x="0"
            y="0"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_167)"
      >
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,250,250)"
        >
          <path
            d="M0 0"
            fill-opacity="0"
            stroke="rgb(0,172,238)"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
            stroke-opacity="1"
            stroke-width="10"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with contrast 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 60px; height: 60px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="160"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 160 160"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_24"
        >
          <rect
            height="160"
            width="160"
            x="0"
            y="0"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_24)"
      >
        <g
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,72.5009994506836,11.694000244140625)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,7.75,7.75)"
          >
            <path
              d=" M7.5,0 C7.5,4.142000198364258 4.142000198364258,7.5 0,7.5 C-4.142000198364258,7.5 -7.5,4.142000198364258 -7.5,0 C-7.5,-4.142000198364258 -4.142000198364258,-7.5 0,-7.5 C4.142000198364258,-7.5 7.5,-4.142000198364258 7.5,0z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.8"
          style="display: block;"
          transform="matrix(1,0,0,1,40.93499755859375,18.801000595092773)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M6.494999885559082,-3.75 C8.565999984741211,-0.16300000250339508 7.336999893188477,4.423999786376953 3.749000072479248,6.494999885559082 C0.16200000047683716,8.565999984741211 -4.422999858856201,7.336999893188477 -6.494999885559082,3.75 C-8.565999984741211,0.16300000250339508 -7.3379998207092285,-4.423999786376953 -3.750999927520752,-6.494999885559082 C-0.16300000250339508,-8.565999984741211 4.423999786376953,-7.336999893188477 6.494999885559082,-3.75z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.6"
          style="display: block;"
          transform="matrix(1,0,0,1,18.607999801635742,41.128997802734375)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.817000389099121)"
          >
            <path
              d=" M3.75,-6.494999885559082 C7.336999893188477,-4.423999786376953 8.565999984741211,0.16200000047683716 6.494999885559082,3.749000072479248 C4.423999786376953,7.336999893188477 -0.16300000250339508,8.567000389099121 -3.75,6.494999885559082 C-7.336999893188477,4.423999786376953 -8.565999984741211,-0.16300000250339508 -6.495999813079834,-3.750999927520752 C-4.423999786376953,-7.3379998207092285 0.16300000250339508,-8.565999984741211 3.75,-6.494999885559082z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.4"
          style="display: block;"
          transform="matrix(1,0,0,1,11.500999450683594,72.69400024414062)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,7.75,7.75)"
          >
            <path
              d=" M0,-7.5 C4.142000198364258,-7.5 7.5,-4.142000198364258 7.5,0 C7.5,4.142000198364258 4.142000198364258,7.5 0,7.5 C-4.142000198364258,7.5 -7.5,4.142000198364258 -7.5,0 C-7.5,-4.142000198364258 -4.142000198364258,-7.5 0,-7.5z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,18.607999801635742,102.12899780273438)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M-3.75,-6.494999885559082 C-0.16300000250339508,-8.565999984741211 4.423999786376953,-7.3379998207092285 6.494999885559082,-3.750999927520752 C8.565999984741211,-0.16300000250339508 7.336999893188477,4.423999786376953 3.75,6.494999885559082 C0.16300000250339508,8.567000389099121 -4.423999786376953,7.336999893188477 -6.495999813079834,3.749000072479248 C-8.565999984741211,0.16200000047683716 -7.336999893188477,-4.423999786376953 -3.75,-6.494999885559082z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,40.93499755859375,124.45600128173828)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M-6.494999885559082,-3.75 C-4.423999786376953,-7.336999893188477 0.16200000047683716,-8.565999984741211 3.749000072479248,-6.494999885559082 C7.336999893188477,-4.423999786376953 8.565999984741211,0.16300000250339508 6.494999885559082,3.75 C4.422999858856201,7.336999893188477 -0.16300000250339508,8.565999984741211 -3.750999927520752,6.494999885559082 C-7.3379998207092285,4.423999786376953 -8.565999984741211,-0.16300000250339508 -6.494999885559082,-3.75z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,72.5009994506836,133.69400024414062)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,7.75,7.75)"
          >
            <path
              d=" M-7.5,0 C-7.5,-4.142000198364258 -4.142000198364258,-7.5 0,-7.5 C4.142000198364258,-7.5 7.5,-4.142000198364258 7.5,0 C7.5,4.142000198364258 4.142000198364258,7.5 0,7.5 C-4.142000198364258,7.5 -7.5,4.142000198364258 -7.5,0z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,101.93499755859375,124.45600128173828)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M-6.494999885559082,3.75 C-8.565999984741211,0.16300000250339508 -7.3379998207092285,-4.423999786376953 -3.750999927520752,-6.494999885559082 C-0.16300000250339508,-8.565999984741211 4.422999858856201,-7.336999893188477 6.494999885559082,-3.75 C8.565999984741211,-0.16300000250339508 7.336999893188477,4.423999786376953 3.749000072479248,6.494999885559082 C0.16200000047683716,8.565999984741211 -4.423999786376953,7.336999893188477 -6.494999885559082,3.75z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,124.26299285888672,102.12799835205078)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M-3.75,6.494999885559082 C-7.336999893188477,4.423999786376953 -8.565999984741211,-0.16200000047683716 -6.494999885559082,-3.749000072479248 C-4.423999786376953,-7.335999965667725 0.16300000250339508,-8.567000389099121 3.75,-6.494999885559082 C7.336999893188477,-4.423999786376953 8.565999984741211,0.164000004529953 6.494999885559082,3.750999927520752 C4.423999786376953,7.3379998207092285 -0.16300000250339508,8.565999984741211 -3.75,6.494999885559082z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,133.50100708007812,72.69400024414062)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,7.75,7.75)"
          >
            <path
              d=" M0,7.5 C-4.142000198364258,7.5 -7.5,4.142000198364258 -7.5,0 C-7.5,-4.142000198364258 -4.142000198364258,-7.5 0,-7.5 C4.142000198364258,-7.5 7.5,-4.142000198364258 7.5,0 C7.5,4.142000198364258 4.142000198364258,7.5 0,7.5z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,124.26299285888672,41.12799835205078)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.817000389099121)"
          >
            <path
              d=" M3.75,6.494999885559082 C0.16300000250339508,8.565999984741211 -4.423999786376953,7.3379998207092285 -6.494999885559082,3.750999927520752 C-8.565999984741211,0.164000004529953 -7.336999893188477,-4.423999786376953 -3.75,-6.494999885559082 C-0.16300000250339508,-8.567000389099121 4.423999786376953,-7.335999965667725 6.494999885559082,-3.749000072479248 C8.565999984741211,-0.16200000047683716 7.336999893188477,4.423999786376953 3.75,6.494999885559082z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
        <g
          opacity="0.2"
          style="display: block;"
          transform="matrix(1,0,0,1,101.93499755859375,18.801000595092773)"
        >
          <g
            opacity="1"
            transform="matrix(1,0,0,1,8.815999984741211,8.815999984741211)"
          >
            <path
              d=" M6.494999885559082,3.75 C4.423999786376953,7.336999893188477 -0.16300000250339508,8.565999984741211 -3.750999927520752,6.494999885559082 C-7.3379998207092285,4.423999786376953 -8.565999984741211,-0.16300000250339508 -6.494999885559082,-3.75 C-4.422999858856201,-7.336999893188477 0.16200000047683716,-8.565999984741211 3.749000072479248,-6.494999885559082 C7.336999893188477,-4.423999786376953 8.565999984741211,0.16300000250339508 6.494999885559082,3.75z"
              fill="rgb(0,0,0)"
              fill-opacity="1"
            />
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with large 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 120px; height: 120px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="500"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 500 500"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_13"
        >
          <rect
            height="500"
            width="500"
            x="0"
            y="0"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_13)"
      >
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          style="display: none;"
        >
          <path
            fill-opacity="0"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
          />
        </g>
        <g
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,250,250)"
        >
          <path
            d="M0 0"
            fill-opacity="0"
            stroke="rgb(0,172,238)"
            stroke-linecap="round"
            stroke-linejoin="miter"
            stroke-miterlimit="4"
            stroke-opacity="1"
            stroke-width="10"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with variant 1`] = `
<div>
  <div
    aria-label="animation"
    role="button"
    style="width: 60px; height: 60px; overflow: hidden; margin: 0px auto; outline: none;"
    tabindex="0"
    title=""
  >
    <svg
      height="400"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 400 400"
      width="400"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_132"
        >
          <rect
            height="400"
            width="400"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_134"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_135"
        >
          <path
            clip-rule="nonzero"
            d=" M337.12200927734375,186.52200317382812 C337.12200927734375,186.52200317382812 59.625,186.49000549316406 59.625,186.49000549316406 C54.80400085449219,186.49000549316406 52.02000045776367,187.4080047607422 52.02000045776367,192.22900390625 C52.02000045776367,197.0500030517578 54.887001037597656,197.44900512695312 59.70800018310547,197.44900512695312 C59.70800018310547,197.44900512695312 337.2049865722656,197.4810028076172 337.2049865722656,197.4810028076172 C342.0260009765625,197.4810028076172 343.91400146484375,194.68800354003906 343.91400146484375,191.91700744628906 C343.91400146484375,189.5 341.9429931640625,186.52200317382812 337.12200927734375,186.52200317382812"
            fill="#ffffff"
            fill-opacity="1"
          />
        </clippath>
        <clippath
          id="__lottie_element_138"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
        <clippath
          id="__lottie_element_151"
        >
          <path
            d="M0,0 L400,0 L400,400 L0,400z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_132)"
      >
        <g
          clip-path="url(#__lottie_element_134)"
          opacity="1"
          style="display: block;"
          transform="matrix(0.9997900128364563,0,0,1,2.0739898681640625,8.014007568359375)"
        >
          <g
            clip-path="url(#__lottie_element_135)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,51.5,186.5)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,146.25,5.425000190734863)"
              >
                <path
                  d=" M-140.8249969482422,-5.175000190734863 C-140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 140.8249969482422,-5.175000190734863 C143.6840057373047,-5.175000190734863 146,-2.8570001125335693 146,0.0010000000474974513 C146,2.8589999675750732 143.6840057373047,5.175000190734863 140.8249969482422,5.175000190734863 C140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 -140.8249969482422,5.175000190734863 C-143.68299865722656,5.175000190734863 -146,2.8589999675750732 -146,0.0010000000474974513 C-146,-2.8570001125335693 -143.68299865722656,-5.175000190734863 -140.8249969482422,-5.175000190734863z"
                  fill="rgb(215,215,215)"
                  fill-opacity="1"
                />
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_151)"
              style="display: none;"
            >
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
              <g
                style="display: none;"
              >
                <g>
                  <path />
                </g>
              </g>
            </g>
            <g
              clip-path="url(#__lottie_element_138)"
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,-263.30731201171875,-68)"
            >
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,124,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,39.75,5.425000190734863)"
                >
                  <path
                    d=" M-34.32500076293945,-5.175000190734863 C-34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 34.32500076293945,-5.175000190734863 C37.18299865722656,-5.175000190734863 39.5,-2.8589999675750732 39.5,0 C39.5,2.8570001125335693 37.18299865722656,5.175000190734863 34.32500076293945,5.175000190734863 C34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 -34.32500076293945,5.175000190734863 C-37.18299865722656,5.175000190734863 -39.5,2.8570001125335693 -39.5,0 C-39.5,-2.8589999675750732 -37.18299865722656,-5.175000190734863 -34.32500076293945,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,63.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,22.25,5.425000190734863)"
                >
                  <path
                    d=" M-16.825000762939453,-5.175000190734863 C-16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 16.825000762939453,-5.175000190734863 C19.683000564575195,-5.175000190734863 22,-2.8589999675750732 22,0 C22,2.8570001125335693 19.683000564575195,5.175000190734863 16.825000762939453,5.175000190734863 C16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 -16.825000762939453,5.175000190734863 C-19.683000564575195,5.175000190734863 -22,2.8570001125335693 -22,0 C-22,-2.8589999675750732 -19.683000564575195,-5.175000190734863 -16.825000762939453,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
              <g
                opacity="1"
                style="display: block;"
                transform="matrix(1,0,0,1,219.5,254.5)"
              >
                <g
                  opacity="1"
                  transform="matrix(1,0,0,1,76.25,5.425000190734863)"
                >
                  <path
                    d=" M-70.82499694824219,-5.175000190734863 C-70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 70.82499694824219,-5.175000190734863 C73.68399810791016,-5.175000190734863 76,-2.8589999675750732 76,0 C76,2.8570001125335693 73.68399810791016,5.175000190734863 70.82499694824219,5.175000190734863 C70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 -70.82499694824219,5.175000190734863 C-73.68299865722656,5.175000190734863 -76,2.8570001125335693 -76,0 C-76,-2.8589999675750732 -73.68299865722656,-5.175000190734863 -70.82499694824219,-5.175000190734863z"
                    fill="rgb(0,116,255)"
                    fill-opacity="1"
                  />
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
